--- a/大语言模型核心论文.md
+++ b/大语言模型核心论文.md
@@ -2,4 +2,4 @@
 ## 模型起源
 卷积神经网络RNN的核心特点是**顺序计算**(Sequential Computation)，这直接导致其无法实现并行处理，复杂度会跟随序列长度 (距离)显著增加。**Transformer**是第一个完全使用attention机制而不依赖RNN的模型。
 ## 模型框架
-![Transformer architecture]
+![Transformer architecture]()
